# tgbot-cpp-1

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: Doxyfile.in  external-targets.cmake  tgbot-cpp-config.cmake
examples/echobot/: CMakeLists.txt
examples/inline-keyboard/: CMakeLists.txt
examples/photo/: CMakeLists.txt
include/tgbot/: Api.h  Bot.h  EventBroadcaster.h  EventHandler.h  TgException.h  TgTypeParser.h  tgbot.h
include/tgbot/net/: HttpClient.h  HttpParser.h  HttpReqArg.h  HttpServer.h  TgLongPoll.h  TgWebhookLocalServer.h  TgWebhookServer.h  TgWebhookTcpServer.h  Url.h
include/tgbot/types/: Invoice.h  LabeledPrice.h  Message.h  OrderInfo.h  PreCheckoutQuery.h  ShippingAddress.h  ShippingOption.h  ShippingQuery.h  SuccessfulPayment.h  User.h
src/: Api.cpp  EventHandler.cpp  TgException.cpp  TgTypeParser.cpp
src/net/: HttpClient.cpp  HttpParser.cpp  TgLongPoll.cpp  Url.cpp
src/tools/: FileTools.cpp  StringTools.cpp
src/types/: InlineQueryResult.cpp  InputFile.cpp
test/: CMakeLists.txt
